--- a/templates/admin/views/dashboard.html.twig
+++ b/templates/admin/views/dashboard.html.twig
@@ -49,12 +49,12 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mt-0">
-                                    <h6 class="fw-bold text-secondary">Posts</h6>
+                                    <h6 class="fw-bold text-secondary">Users</h6>
                                 </div>
 
                                 <div class="col-auto text-secondary">
                                     <a href="{{url('admin/users/register')}}" tooltip="tooltip" title="Cadastrar Post">
-                                        <i class="fa-solid fa-file-pen"></i>
+                                        <i class="fas fa-users"></i>
                                     </a>                                            
                                 </div>
                             </div>
