--- a/templates/admin/views/categories/categories.html.twig
+++ b/templates/admin/views/categories/categories.html.twig
@@ -49,8 +49,13 @@
                             {% endif %}
                         </td>
                         <td class="text-center">
-                            <a href="{{ url('admin/categories/edit/'~category.id)}}"><button type="button" class="btn btn-success">Editar</button></a>
-                            <a href="{{ url('admin/categories/delete/'~category.id)}}"><button type="button" class="btn btn-danger">Excluir</button></a>
+                            <a href="{{ url('admin/categories/edit/'~category.id)}}" tooltip="tooltip" title="Editar">
+                                <i class="fa-solid fa-pen m-1"></i>
+                            </a>
+                            <a href="{{ url('admin/categories/delete/'~category.id)}}" tooltip="tooltip" title="Deletar">
+                                <i class="fa-solid fa-trash m-1"></i>
+                            </a> 
+                        
                         </td>
                     </tr>
                     {%endfor%}
