--- a/templates/admin/views/posts/posts.html.twig
+++ b/templates/admin/views/posts/posts.html.twig
@@ -33,7 +33,7 @@
                         <th>id</th>
                         <th>Título</th>
                         <th class="text-center">Status</th>
-                        <th  class="text-center">Ação</th>
+                        <th class="text-center">Ação</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -49,8 +49,12 @@
                             {% endif %}
                         </td>
                         <td class="text-center">
-                            <a href="{{ url('admin/posts/edit/'~post.id)}}"><button type="button" class="btn btn-success">Editar</button></a>
-                            <a href="{{ url('admin/posts/delete/'~post.id)}}"><button type="button" class="btn btn-danger">Excluir</button></a>
+                            <a href="{{ url('admin/posts/edit/'~post.id)}}" tooltip="tooltip" title="Editar">
+                                <i class="fa-solid fa-pen m-1"></i>
+                            </a>
+                            <a href="{{ url('admin/posts/delete/'~post.id)}}" tooltip="tooltip" title="Deletar">
+                                <i class="fa-solid fa-trash m-1"></i>
+                            </a>  
                         </td>
                     </tr>
                     {%endfor%}
