--- a/templates/admin/views/posts/posts.html.twig
+++ b/templates/admin/views/posts/posts.html.twig
@@ -19,9 +19,9 @@
 <div class="card border-0 shadow-sm">
     <div class="card-header bg-white border-0 d-flex justify-content-between align-items-center">
          <div>
-            <span class="badge rounded text-bg-secondary">{{total.total}} posts</span> 
-            <span class="badge rounded text-bg-success">{{total.active}} ativo</span> 
-            <span class="badge rounded text-bg-danger">{{total.inactive}} inativo</span> 
+            <span class="badge rounded text-bg-secondary">{{total.posts}} posts</span> 
+            <span class="badge rounded text-bg-success">{{total.postsActive}} ativo</span> 
+            <span class="badge rounded text-bg-danger">{{total.postsInactive}} inativo</span> 
         </div>
         <a href="{{url('admin/posts/register')}}" class="btn btn-primary">Cadastrar</a>
     </div>
