--- a/templates/admin/views/login.html.twig
+++ b/templates/admin/views/login.html.twig
@@ -17,7 +17,7 @@
                     </div>
                     <div class="form-floating mb-3">
                         <input type="password" name="password" id="password" class="form-control"  placeholder="Senha">
-                        <label for="password">Senha</label>
+                        <label for="senha">Senha</label>
                     </div>
 
                     <button class="w-100 btn btn-lg btn-dark mb-5" type="submit">Entrar</button>
