--- a/templates/admin/views/footer.html.twig
+++ b/templates/admin/views/footer.html.twig
@@ -3,26 +3,35 @@
         <div class="row text-muted copyright">
             <div class="col-6 text-start">
                 <small class="mb-0">
-                    &copy; {{ "now"|date("Y") }} - {{constant('SITE_NOME')}}. Todos os direitos reservados.
+                    &copy;
+                    {{ "now"|date("Y") }}
+                    -
+                    {{ constant('SITE_NOME') }}
+                    . Todos os direitos reservados.
                 </small>
             </div>
             <div class="col-6 text-end">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a class="text-muted" href="{{url('')}}" tooltip="tooltip" title="Administração de Posts">
+                        <a class="text-muted" href="{{ url() }}" tooltip="tooltip" title="BLOG">
+                            Blog
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="text-muted" href="{{ url('admin/posts/posts') }}" tooltip="tooltip" title="Administração de Posts">
                             Posts
                         </a>
-                    </li> 
+                    </li>
                     <li class="list-inline-item">
-                        <a class="text-muted" href="{{url('')}}" tooltip="tooltip" title="Administração de Categorias">
+                        <a class="text-muted" href="{{ url('admin/categories/categories') }}" tooltip="tooltip" title="Administração de Categorias">
                             Categorias
                         </a>
-                    </li> 
+                    </li>
                     <li class="list-inline-item">
-                        <a class="text-muted" href="{{url('')}}" tooltip="tooltip" title="Administração de Usuários">
+                        <a class="text-muted" href="{{ url('admin/users/users') }}" tooltip="tooltip" title="Administração de Usuários">
                             Usuários
                         </a>
-                    </li> 
+                    </li>
                 </ul>
             </div>
         </div>
