--- a/templates/admin/views/footer.html.twig
+++ b/templates/admin/views/footer.html.twig
@@ -13,7 +13,7 @@
             <div class="col-6 text-end">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a class="text-muted" href="{{ url() }}" tooltip="tooltip" title="BLOG">
+                        <a class="text-muted" href="{{ url('/') }}" tooltip="tooltip" title="BLOG">
                             Blog
                         </a>
                     </li>
