--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -7,7 +7,7 @@
 
             <ul class="navbar navbar-dark bg-dark col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li>
-                    <a href="{{ url() }}" class="nav-link px-2" tooltip="tooltip" title="Página Inicial">Home</a>
+                    <a href="{{ url('/') }}" class="nav-link px-2" tooltip="tooltip" title="Página Inicial">Home</a>
                 </li>
                 <li>
                     <a href="{{ url('sobre') }}" class="nav-link px-2 text-white" tooltip="tooltip"
