--- a/templates/site/views/post.html.twig
+++ b/templates/site/views/post.html.twig
@@ -5,7 +5,9 @@
     <div class="row">
         <div class="col-lg-9 col-md-12">
             <h1>{{post.title}}</h1>
-
+                <div class="my-3">
+                    <smal class="text-muted">Por {{post.user.name}}, 00/00/000 às 00:00 em {{post.category.title}}</smal>
+                </div>
             <p>{{post.text}}</p>
         </div>
         <div class="col-lg-3">
