--- a/templates/site/views/footer.html.twig
+++ b/templates/site/views/footer.html.twig
@@ -7,6 +7,6 @@
 
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="{{ url('/') }}" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="{{ url('/sobre') }}" class="nav-link px-2 text-muted">About</a></li>
+      <li class="nav-item"><a href="{{ url('/sobre') }}" class="nav-link px-2 text-muted">Sobre</a></li>
     </ul>
   </footer>
