--- a/templates/site/views/index.html.twig
+++ b/templates/site/views/index.html.twig
@@ -6,16 +6,22 @@
                 <div class="row">
                     {% for post in posts %}
                         <div class="col-md-6 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">
-                                        {{ post.title }}
-                                    </h5>
-                                    <a href='{{url('post/'~post.id)}}'>
-                                        <p class="card-text">
-                                            {{ summarizeText(post.text,150) }}
-                                        </p>
-                                    </a>
+                            <div class="card h-100">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <a href="{{url('post/'~post.id)}}" tooltip="tooltip title="{{post_title}}">
+                                            <h4 class="card-title">
+                                                {{ post.title }}
+                                                <div class="d-flex justify-content-between my-3 text-muted">
+                                                    <smal>{{post.category.title}}</smal>
+                                                    <smal>00/00/0000</smal>
+                                                </div>
+                                            </h4>
+                                            <p class="card-text">
+                                                {{ summarizeText(post.text,150) }}
+                                            </p>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
