--- a/templates/admin/views/posts/forms_posts.html.twig
+++ b/templates/admin/views/posts/forms_posts.html.twig
@@ -29,7 +29,7 @@
                     <input type="text" class="form-control" id="title" name="title" value="{{ post.title }}"></div>
                     <div class="mb-3">
                         <label class="form-label"></label>
-                        <textarea name='text' class="form-control" id="text" rows="5">
+                        <textarea name='text' class="form-control autoResizeTextarea" id="autoResizeTextarea" id="text" rows="1">
                             {{ post.text }}
                         </textarea>
                     </div>
