--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -1,7 +1,7 @@
 <header class="p-3 text-bg-dark">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="{{ url() }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+            <a href="{{ url('/') }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                 <img src="{{url('templates/site/assets/img/php-logo.svg')}}" alt="" height="20" width="80">
             </a>
 
@@ -36,10 +36,10 @@
 
             <div class="text-end">
                 <a href="{{ url('admin/login') }}" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
-                    Entrar
+                    Log in
                 </a>
                 <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
-                    Cadastre-se
+                    Inscreva-se
                 </a>
             </div>
         </div>
