--- a/templates/site/views/post.html.twig
+++ b/templates/site/views/post.html.twig
@@ -6,9 +6,12 @@
         <div class="col-lg-9 col-md-12">
             <h1>{{post.title}}</h1>
                 <div class="my-3">
-            <smal class="text-muted">Por {{post.user.name}}, {{post.created_at | date ("d/m/Y" )}} às {{post.created_at | date ("H:i" )}} em {{post.category.title}}</smal>
+                    <smal class="text-muted">Por {{post.user.name}}, {{post.created_at | date ("d/m/Y" )}} às {{post.created_at | date ("H:i" )}} em {{post.category.title}}</smal>
                 </div>
-            <p>{{post.text}}</p>
+                <div data-mdb-input-init class="form-outline mb-4">
+                    <textarea class="form-control autoResizeTextarea" id="autoResizeTextarea" rows="1">{{post.text}}</textarea>
+                    <label class="form-label" for="form6Example7"></label>
+                </div>
         </div>
         <div class="col-lg-3">
             {% include'sidebar.html.twig '%}
