add link roolback

--- a/templates/admin/views/categories/forms_categories.html.twig
+++ b/templates/admin/views/categories/forms_categories.html.twig
@@ -9,7 +9,12 @@
             </a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
-           Categorias
+            <a href="{{url('admin/categories/categories')}}">
+                Categorias
+            </a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">
+            Cadastrar
         </li>
     </ol>
 </nav>
