--- a/templates/admin/views/posts/forms_posts.html.twig
+++ b/templates/admin/views/posts/forms_posts.html.twig
@@ -4,13 +4,16 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="{{ url('admin/dashboard') }}">
-                    Home                           
-                                    
+                    Home                                           
                 </a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-                Posts                
-                            
+            <a href="{{ url('admin/posts/posts') }}">
+                Posts 
+            </a>                           
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+                Cadastrar
             </li>
         </ol>
     </nav>
