--- a/templates/admin/views/users/forms_users.html.twig
+++ b/templates/admin/views/users/forms_users.html.twig
@@ -9,8 +9,13 @@
                 </a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-                Usuários
+                <a href="{{ url('admin/users/users') }}">
+                    Usuários
+                </a>
             </li>
+            <li class="breadcrumb-item active" aria-current="page">
+                Cadastrar
+            </li>   
         </ol>
     </nav>
     
