--- a/templates/admin/views/menu.html.twig
+++ b/templates/admin/views/menu.html.twig
@@ -14,6 +14,12 @@
                 Administração
             </li>
             <li>
+                <a href="{{url('admin/dashboard')}}" tooltip="tooltip" title="Administração de Posts">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <span>Dasboard</span>
+                </a>
+            </li>  
+            <li>
                 <a href="{{url('admin/posts/posts')}}" tooltip="tooltip" title="Administração de Posts">
                     <i class="fa-solid fa-file-pen"></i>
                     <span>Posts</span>
