--- a/templates/admin/views/users/users.html.twig
+++ b/templates/admin/views/users/users.html.twig
@@ -31,7 +31,7 @@
                 <span class="badge text-bg-danger bg-opacity-100">{{total.adminInactive}}</span>
             </span>
         </div>
-        <a href="{{url('admin/users/register')}}" class="btn btn-dark" tooltip="tooltip" title="Cadastrar Post">
+        <a href="{{url('admin/users/add')}}" class="btn btn-dark" tooltip="tooltip" title="Cadastrar Post">
             Cadastrar
         </a>
     </div>
