--- a/templates/admin/views/categories/categories.html.twig
+++ b/templates/admin/views/categories/categories.html.twig
@@ -23,7 +23,7 @@
             <span class="badge rounded text-bg-success">{{total.active}} ativo</span> 
             <span class="badge rounded text-bg-danger">{{total.inactive}} inativo</span> 
         </div>
-        <a href="{{url('admin/categories/register')}}" class="btn btn-primary">Cadastrar</a>
+        <a href="{{url('admin/categories/add')}}" class="btn btn-primary">Cadastrar</a>
     </div>
     <div class="card-body">
         <div class="table-responsive">
