--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -21,7 +21,7 @@
                 <ul class="dropdown-menu">
                     {% for category in categories %}
                     <li>
-                        <a class="dropdown-item" href="{{url('category/'~category.id)}}">
+                        <a class="dropdown-item" href="{{url('category/'~category.slug)}}">
                             {{category.title}}
                         </a>
                     </li>
