--- a/templates/site/views/index.html.twig
+++ b/templates/site/views/index.html.twig
@@ -9,7 +9,7 @@
                             <div class="card h-100">
                                 <div class="card">
                                     <div class="card-body">
-                                        <a href="{{url('post/'~post.id)}}" tooltip="tooltip title="{{post_title}}">
+                                        <a href="{{url('post/'~post.slug)}}" tooltip="tooltip title="{{post_title}}">
                                             <h4 class="card-title">
                                                 {{ post.title }}
                                                 <div class="d-flex justify-content-between my-3 text-muted">
