--- a/templates/site/views/sidebar.html.twig
+++ b/templates/site/views/sidebar.html.twig
@@ -3,7 +3,7 @@
 </h4>
 <ul class="list-group list-group-flush">
     {% for category in categories %}
-        <a href="{{url('category/'~category.id)}}" class="list-group-item list-group-item-action">
+        <a href="{{url('category/'~category.slug)}}" class="list-group-item list-group-item-action">
             {{ category.title  }}
         </a>
     {% endfor %}
