--- a/templates/admin/views/menu.html.twig
+++ b/templates/admin/views/menu.html.twig
@@ -37,6 +37,12 @@
                     <span>Usuários</span>
                 </a>
             </li>
+            <li>
+                <a href="{{url('/')}}" tooltip="tooltip" title="Blog">
+                    <i class="fa-solid fa-blog"></i>
+                    <span>Blog</span>
+                </a>
+            </li>  
         </ul>
     </div>
     
