--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -35,12 +35,24 @@
             </form>            
 
             <div class="text-end">
-                <a href="{{ url('admin/login') }}" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
-                    Log in
-                </a>
-                <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
-                    Inscreva-se
-                </a>
+                {% if user().level == 3 %}
+                    <a href="{{url('admin/dashboard')}}" class="btn btn-outline-light me-2" tooltip="tooltip" title="">
+                        Painel Administrativo
+                    </a>
+                {% else %}
+                    <a href="{{ url('admin/login') }}" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
+                        Log in
+                    </a>
+                {% endif %}
+                {% if user().level == 3 %}
+                    <a href="{{url('admin/exit')}}" class="btn btn-warning" tooltip="tooltip" title="">
+                        Sair
+                    </a>
+                {% else %}
+                    <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
+                        Inscreva-se
+                    </a>
+                {% endif %}
             </div>
         </div>
         
