--- a/templates/site/views/footer.html.twig
+++ b/templates/site/views/footer.html.twig
@@ -1,12 +1,25 @@
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top  text-bg-dark">
-    <p class="col-md-4 mb-0 text-muted">&copy;2021 - {{ "now" | date("Y")}} - {{ constant('SITE_NOME') }}</p>
-
-    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-    </a>
-
-    <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="{{ url('/') }}" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="{{ url('/sobre') }}" class="nav-link px-2 text-muted">Sobre</a></li>
-    </ul>
-  </footer>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top text-bg-dark">
+  <p class="col-md-4 mb-0 text-muted">
+    &copy;2021 -
+    {{ "now" | date("Y") }}
+    -
+    {{ constant('SITE_NOME') }}
+  </p>
+  <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+    <svg class="bi me-2" width="40" height="32">
+      <use xlink:href="#bootstrap" />
+    </svg>
+  </a>
+  <ul class="nav col-md-4 justify-content-end">
+    <li class="nav-item">
+      <a href="{{ url('/') }}" class="nav-link px-2 text-muted">
+        Home
+      </a>
+    </li>
+    <li class="nav-item">
+      <a href="{{ url('/sobre') }}" class="nav-link px-2 text-muted">
+        Sobre
+      </a>
+    </li>
+  </ul>
+</footer>
