--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -7,14 +7,14 @@
 
             <ul class="navbar navbar-dark bg-dark col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li>
-                    <a href="{{ url('/') }}" class="nav-link px-2" tooltip="tooltip" title="Página Inicial">Home</a>
+                    <a href="{{ url('/') }}" class="nav-link px-3" tooltip="tooltip" title="Página Inicial">Home</a>
                 </li>
                 <li>
-                    <a href="{{ url('sobre') }}" class="nav-link px-2 text-white" tooltip="tooltip"
+                    <a href="{{ url('sobre') }}" class="nav-link px-3 text-white" tooltip="tooltip"
                         title="Sobre Nós">Sobre</a>
                 </li>
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle  px-3" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Categorias
                 </a>
